--- a/css/styles.css
+++ b/css/styles.css
@@ -393,7 +393,6 @@ img {
 
 .portfolio-cart-item {
   background: #fff;
-  flex-basis: calc((100% - 3 * 24px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -526,6 +525,10 @@ img {
   color: #f4f4fd;
 }
 
+.footer-social-container {
+  margin-right: 80px;
+}
+
 .social-media {
   font-weight: 500;
   font-size: 16px;
@@ -556,6 +559,59 @@ img {
   background-color: #31d0aa;
 }
 
+.footer-form {
+  display: flex;
+  gap: 24px;
+}
+
+.footer-input {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  background-color: transparent;
+  padding: 8px 16px;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+.footer-input::placeholder {
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+.footer-form-btn {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  border-radius: 4px;
+  padding: 8px 24px;
+  width: 165px;
+  height: 40px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: #4d5ae5;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+}
+
+.footer-form-btn:hover,
+.footer-form-btn:focus {
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #404bbf;
+}
+
+.footer-soc-icon {
+  fill: #fff;
+}
 /** ==============MODEL WINDOWS================ */
 
 .backdrop {
@@ -564,9 +620,15 @@ img {
   background: rgba(46, 47, 66, 0.4);
   width: 100%;
   height: 100%;
-  /* display: flex;
-  align-items: center;
-  justify-content: center; */
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 
 .modal {
@@ -646,7 +708,7 @@ img {
 
 .modal-input:hover + .modal-icon,
 .modal-input:focus + .modal-icon {
-  fill: #4d5ae5;
+  fill: #404bbf;
 }
 
 .modal-input::placeholder {
