--- a/css/styles.css
+++ b/css/styles.css
@@ -593,7 +593,7 @@ img {
   color: #fff;
   border-radius: 4px;
   padding: 8px 24px;
-  width: 165px;
+  min-width: 165px;
   height: 40px;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   background-color: #4d5ae5;
@@ -601,7 +601,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 16px;
+  cursor: pointer;
 }
 
 .footer-form-btn:hover,
@@ -612,6 +612,7 @@ img {
 
 .footer-soc-icon {
   fill: #fff;
+  margin-left: 16px;
 }
 /** ==============MODEL WINDOWS================ */
 
@@ -624,7 +625,13 @@ img {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  opacity: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  visibility: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+/* opacity: 0;
+  visibility: hidden;
+  pointer-events: none; */
 
 .is-open {
   opacity: 1;
@@ -638,7 +645,6 @@ img {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background: #fcfcfc;
-  background-color: #fafafa;
   border-radius: 4px;
   position: absolute;
   top: 50%;
@@ -648,6 +654,7 @@ img {
   padding-right: 24px;
   padding-left: 24px;
   padding-bottom: 24px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close {
@@ -656,10 +663,35 @@ img {
   top: 24px;
   width: 24px;
   height: 24px;
-  border-radius: 100%;
+  border-radius: 50%;
   fill: #e7e9fc;
   stroke-width: 1px;
   stroke: rgba(0, 0, 0, 0.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+  cursor: pointer;
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  background-color: #404bbf;
+  border: none;
+}
+
+.button-close-icon {
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-close-icon:hover,
+.button-close-icon:focus {
+  fill: #ffffff;
 }
 
 .modal-title {
@@ -674,14 +706,16 @@ img {
 }
 
 .modal-field {
-  margin-bottom: 18px;
+  margin-bottom: 8px;
 }
 
 .modal-label {
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
+  display: block;
+  margin-bottom: 4px;
 }
 
 .modal-input {
@@ -691,14 +725,8 @@ img {
   border-radius: 4px;
   background-color: transparent;
   outline: transparent;
-  padding-left: 50px;
-  transition: border-color 300ms linear;
-}
-
-.modal-input:invalid {
-}
-
-.modal-input:valid {
+  padding-left: 38px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:hover,
@@ -709,24 +737,7 @@ img {
 
 .modal-input:hover + .modal-icon,
 .modal-input:focus + .modal-icon {
-  fill: #404bbf;
-}
-
-.modal-input::placeholder {
-  color: purple;
-}
-
-.modal-label {
-  font-size: 14px;
-  letter-spacing: -0.02em;
-  color: rgba(64, 64, 64, 0.3);
-  display: block;
-  margin-bottom: 8px;
-}
-
-.modal-label span {
-  display: block;
-  margin-bottom: 8px;
+  fill: #4d5ae5;
 }
 
 .modal-icon {
@@ -736,28 +747,79 @@ img {
   top: 12px;
   top: 50%;
   transform: translateY(-50%);
-  transition: stroke 300ms linear;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input-wrap {
   position: relative;
 }
 
+.modal-comment {
+  margin-bottom: 16px;
+}
+
 .modal-text {
   width: 100%;
-  height: 138px;
+  height: 120px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   background-color: transparent;
   outline: transparent;
-  padding: 16px 16px;
+  padding: 8px 16px;
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
   transition: border-color 300ms linear;
   resize: none;
   margin-bottom: 16px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-text:focus {
+  border-color: #4d5ae5;
+}
+
+.modal-checkbox {
+  margin-bottom: 24px;
+}
+
+.check-text {
+  position: relative;
+  font-size: 14px;
+  letter-spacing: -0.02em;
+  color: rgba(64, 64, 64, 0.6);
+  display: flex;
+  align-items: center;
+}
+
+.check-text span {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  border-radius: 6px;
+  border: 1px solid rgba(17, 17, 17, 0.14);
+  margin-right: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+  
+}
+
+.modal-check:checked + .check-text span {
+  background-color: #4d5ae5;
+  border-radius: 2px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+  fill: #fafafa;
+}
+
+.check-link {
+  padding-left: 4px;
+  line-height: 1.33333;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
 }
 
 .modal-btn {
