--- a/css/styles.css
+++ b/css/styles.css
@@ -622,11 +622,9 @@ img {
   background: rgba(46, 47, 66, 0.4);
   width: 100%;
   height: 100%;
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  opacity: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  visibility: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* opacity: 0;
@@ -674,7 +672,7 @@ img {
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
   cursor: pointer;
-  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -684,13 +682,13 @@ img {
   border: none;
 }
 
-.button-close-icon {
+.close-icon {
   fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-close-icon:hover,
-.button-close-icon:focus {
+.modal-close:hover + .close-icon,
+.modal-close:focus + .close-icon {
   fill: #ffffff;
 }
 
@@ -786,32 +784,35 @@ img {
 
 .check-text {
   position: relative;
-  font-size: 14px;
-  letter-spacing: -0.02em;
-  color: rgba(64, 64, 64, 0.6);
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
   display: flex;
   align-items: center;
 }
 
-.check-text span {
+.check-title {
   position: relative;
-  width: 20px;
-  height: 20px;
-  border-radius: 6px;
-  border: 1px solid rgba(17, 17, 17, 0.14);
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
   margin-right: 12px;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
-  
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-check:checked + .check-text span {
-  background-color: #4d5ae5;
+  background-color: #404bbf;
   border-radius: 2px;
-border: 1px solid rgba(46, 47, 66, 0.4);
-  fill: #fafafa;
+  border: none;
+  fill: #F4F4FD;
 }
 
 .check-link {
