--- a/css/styles.css
+++ b/css/styles.css
@@ -687,8 +687,8 @@ img {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close:hover + .close-icon,
-.modal-close:focus + .close-icon {
+.close-icon:hover, 
+.close-icon:focus {
   fill: #ffffff;
 }
 
@@ -788,7 +788,7 @@ img {
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  display: flex;
+  display: inline-flex;
   align-items: center;
 }
 
@@ -798,7 +798,7 @@ img {
   height: 16px;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  margin-right: 12px;
+  margin-right: 8px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -812,7 +812,7 @@ img {
   background-color: #404bbf;
   border-radius: 2px;
   border: none;
-  fill: #F4F4FD;
+  fill: #f4f4fd;
 }
 
 .check-link {
