--- a/css/styles.css
+++ b/css/styles.css
@@ -676,19 +676,19 @@ img {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.close-icon {
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .modal-close:hover,
 .modal-close:focus {
   background-color: #404bbf;
   border: none;
 }
 
-.close-icon {
-  fill: #2e2f42;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.close-icon:hover, 
-.close-icon:focus {
+.modal-close:hover .close-icon,
+.modal-close:focus .close-icon {
   fill: #ffffff;
 }
 
@@ -779,6 +779,7 @@ img {
 }
 
 .modal-checkbox {
+  display: inline-flex;
   margin-bottom: 24px;
 }
 
