--- a/css/styles.css
+++ b/css/styles.css
@@ -779,7 +779,6 @@ img {
 }
 
 .modal-checkbox {
-  display: inline-flex;
   margin-bottom: 24px;
 }
 
@@ -793,6 +792,12 @@ img {
   align-items: center;
 }
 
+.check-text span {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .check-title {
   position: relative;
   width: 16px;
@@ -800,9 +805,6 @@ img {
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   margin-right: 8px;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
   fill: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
