--- a/css/styles.css
+++ b/css/styles.css
@@ -783,22 +783,30 @@ img {
 }
 
 .check-text {
-  position: relative;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
-  display: inline-flex;
-  align-items: center;
+  
 }
 
 .check-text span {
+  position: relative;
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  margin-right: 8px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.check-title {
+/* .check-title {
   position: relative;
   width: 16px;
   height: 16px;
@@ -809,7 +817,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 .modal-check:checked + .check-text span {
   background-color: #404bbf;
